--- a/CinemaApp.Web/Views/Shared/_Layout.cshtml
+++ b/CinemaApp.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index">Movies</a>
                         </li>
+                        @if (this.User?.Identity?.IsAuthenticated ?? false)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Watchlist" asp-action="Index">My Watchlist</a>
+                            </li>
+                        }
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
