--- a/CinemaApp.Web/Views/Movie/Index.cshtml
+++ b/CinemaApp.Web/Views/Movie/Index.cshtml
@@ -1,10 +1,15 @@
-﻿@using CinemaApp.Web.ViewModels.Movie
-@model IEnumerable<AllMoviesIndexViewModel>
+﻿@using CinemaApp.Services.Data.Interfaces
+@using CinemaApp.Web.Infrastructure.Extensions
+@using CinemaApp.Web.ViewModels.Movie
+@using static CinemaApp.Common.ErrorMessages.Watchlist
 
-@if (ViewData["ErrorMessage"] != null)
+@model IEnumerable<AllMoviesIndexViewModel>
+@inject IManagerService managerService
+
+@if (TempData[nameof(AddToWatchListNotSuccessfullMessage)] != null)
 {
     <div class="alert alert-danger" role="alert">
-        @ViewData["ErrorMessage"]
+        @TempData[nameof(AddToWatchListNotSuccessfullMessage)]
     </div>
 }
 <h2>All Movies</h2>
@@ -29,14 +34,20 @@
             <td>@movie.Duration minutes</td>
             <td>
                 <a asp-action="Details" asp-route-id="@movie.Id" class="btn btn-info">Details</a>
-                <a asp-action="AddToProgram" asp-route-id="@movie.Id" class="btn btn-info">Add to Program</a>
-            
+
                 @if (User?.Identity?.IsAuthenticated ?? false)
                 {
                     <form asp-controller="Watchlist" asp-action="AddToWatchlist" method="post" class="d-inline">
-                        <input type="hidden" name="movieId" value="@movie.Id" />
+                        <input type="hidden" name="movieId" value="@movie.Id"/>
                         <button type="submit" class="btn btn-warning">+Watchlist</button>
                     </form>
+
+                    @if (await this.managerService.IsUserManagerAsync(this.User.GetUserId()))
+                    {
+                        <a asp-action="AddToProgram" asp-route-id="@movie.Id" class="btn btn-info">Add to Program</a>
+                        <a asp-action="Edit" asp-route-id="@movie.Id" class="btn btn-primary">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@movie.Id" class="btn btn-danger">Delete</a>
+                    }
                 }
             </td>
         </tr>
@@ -44,4 +55,10 @@
     </tbody>
 </table>
 
-<a asp-action="Create" class="btn btn-primary">Add New Movie</a>
+@if (User?.Identity?.IsAuthenticated ?? false)
+{
+    @if (await this.managerService.IsUserManagerAsync(this.User.GetUserId()))
+    {
+        <a asp-action="Create" class="btn btn-primary">Add New Movie</a>
+    }
+}
