--- a/CinemaApp.Web/Views/Cinema/Index.cshtml
+++ b/CinemaApp.Web/Views/Cinema/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@cinema.Name</h5>
                     <p class="card-text">@cinema.Location</p>
-                    <a asp-action="Details" asp-route-id="@cinema.Id" class="btn btn-primary">View Movie Program</a>
+                    <a asp-action="Details" asp-route-id="@cinema.Id" class="btn btn-primary">View Cinema Program</a>
                 </div>
             </div>
         </div>
