--- a/CinemaApp.Web/Views/Shared/_Layout.cshtml
+++ b/CinemaApp.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CinemaApp.Web.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
                                             <a class="dropdown-item" asp-area="" asp-controller="Cinema" asp-action="Manage">Manage Cinemas</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index">Manage Movies</a>
+                                            <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Manage">Manage Movies</a>
                                         </li>
                                     </ul>
                                 </li>
